# Winafi

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE.md  publish-release.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-appimage.yml  build-arch.yml  build-deb.yml  build-flatpak.yml  build-rpm.yml  build-snap.yml  ci-distros.yml  ci.yml  pr-validation.yml  release.yml
aur/: PKGBUILD
docs/: API.md  ARCHITECTURE.md  BUILD.md  BUILD_SUCCESS.md  CODE_ANALYSIS.md  DEVELOPER_GUIDE.md  ERROR_CODES.md  LINUX_PORT_STRATEGY.md  PACKAGING.md  PLATFORM_ANALYSIS.md  README.md  SAFETY_GATES.md  SECURE_BOOT_ROOT_CAUSE.md  TASK15_FULL_VERIFICATION.md  TASK15_HARDWARE_TEST.md  TEST_PLAN.md  USER_MANUAL.md
docs/phase2-progress/: CONTEXT.md  PROGRESS.md  README.md
flatpak/: com.github.alphaglider25.winafi.yml
include/: error_codes.h  winafi.h
packaging/: build-appimage.sh  winafi.desktop
scripts/: build-appimage.sh  build-deb.sh  build-portable.sh  build-rpm.sh  build-source-tarball.sh  fetch-uefi-ntfs.sh
snap/: snapcraft.yaml
src/: CMakeLists.txt  badblocks.c  darkmode.c  dev.c  dos.c  dos_locale.c  drive.c  errors.txt  format.c  format_ext.c  format_fat32.c  hash.c  icon.c  iso.c  localization.c  main_placeholder.c  net.c  parser.c  pki.c  process.c  registry.h  settings.h  smart.c  stdfn.c  stdio.c  stdlg.c  syslinux.c  ui.c  vhd.c  winafi.c  winafi.rc  wue.c  xml.c
src/assets/uefi-ntfs/: SHA256SUMS  bootx64.efi
src/cli/: cli.c  main.c
src/core/: error.c  error.h  log.c  log.h  progress.c  progress.h
src/ext2fs/: nt_io.c
src/gui/: AdvancedDriveDialog.cpp  AdvancedDriveDialog.h  AdvancedFormatDialog.cpp  AdvancedFormatDialog.h  ISOHashDialog.cpp  ISOHashDialog.h  ISOHashWorkerThread.cpp  ISOHashWorkerThread.h  MainWindow.cpp  MainWindow.h  WorkerThread.cpp  WorkerThread.h  dark_mode.cpp  dark_mode.h  main.cpp  resources.qrc
src/gui/sections/: AdvancedSection.cpp  AdvancedSection.h  SourceSection.cpp  SourceSection.h  TargetSection.cpp  TargetSection.h  WindowsCustomizeSection.cpp  WindowsCustomizeSection.h
src/gui/theme/: Theme.cpp  Theme.h
src/platform/linux/: assets.c  assets.h  badblocks_check.c  badblocks_check.h  bootloader.c  bootloader.h  device.c  device.h  device_validate.c  device_validate.h  error_messages.c  filesystem.c  filesystem.h  fs_ops.c  fs_ops.h  iso.c  iso.h  iso_extract.c  iso_extract.h  iso_verify.c  iso_verify.h  linux_boot.c  linux_boot.h  localization_linux.c  localization_linux.h  mbr_bootloader.c  mbr_bootloader.h  mount_ops.c  mount_ops.h  net.c  net.h  partition.c  partition.h  pe.c  pe.h  pki.c  pki.h  proc_utils.c  proc_utils.h  process.c  (+19 more)
src/wimlib/wimlib/: error.h
tests/: CMakeLists.txt
tests/integration/: test_boot_qemu.sh  test_secureboot_qemu.sh
tests/unit/: test_assets.c  test_customize_section.cpp  test_dark_mode.cpp  test_localization_linux.c  test_net.c  test_pe.c  test_proc_utils.c  test_sbat.c  test_settings.c  test_smart.c  test_theme.cpp  test_update.c  test_wimboot.c  test_wue.c
