# Unit tests
add_executable(test_settings unit/test_settings.c)
target_link_libraries(test_settings PRIVATE winafi-core)
target_include_directories(test_settings PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_settings COMMAND test_settings)

add_executable(test_net unit/test_net.c ../src/platform/linux/net.c)
target_link_libraries(test_net PRIVATE winafi-core CURL::libcurl)
target_include_directories(test_net PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_net COMMAND test_net)

add_executable(test_update unit/test_update.c ../src/platform/linux/update.c ../src/platform/linux/net.c)
target_link_libraries(test_update PRIVATE winafi-core CURL::libcurl)
target_include_directories(test_update PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_compile_definitions(test_update PRIVATE _POSIX_C_SOURCE=200809L WINAFI_VERSION="0.0.5")
add_test(NAME test_update COMMAND test_update)

add_executable(test_proc_utils unit/test_proc_utils.c ../src/platform/linux/proc_utils.c)
target_link_libraries(test_proc_utils PRIVATE winafi-core)
target_include_directories(test_proc_utils PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_proc_utils COMMAND test_proc_utils)

add_executable(test_wue unit/test_wue.c ../src/platform/linux/wue.c)
target_link_libraries(test_wue PRIVATE winafi-core)
target_include_directories(test_wue PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_compile_definitions(test_wue PRIVATE _POSIX_C_SOURCE=200809L)
add_test(NAME test_wue COMMAND test_wue)

add_executable(test_wimboot unit/test_wimboot.c ../src/platform/linux/wimboot.c)
target_link_libraries(test_wimboot PRIVATE winafi-core)
target_include_directories(test_wimboot PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_wimboot COMMAND test_wimboot)

add_executable(test_localization_linux unit/test_localization_linux.c ../src/platform/linux/localization_linux.c)
target_link_libraries(test_localization_linux PRIVATE winafi-core)
target_include_directories(test_localization_linux PRIVATE ${CMAKE_SOURCE_DIR}/src)
add_test(NAME test_localization_linux COMMAND test_localization_linux)

add_executable(test_smart unit/test_smart.c ../src/platform/linux/smart.c)
target_link_libraries(test_smart PRIVATE winafi-core)
target_include_directories(test_smart PRIVATE ${CMAKE_SOURCE_DIR}/src)
if(LIBATASMART_FOUND)
    target_compile_definitions(test_smart PRIVATE HAVE_LIBATASMART)
    target_link_libraries(test_smart PRIVATE ${LIBATASMART_LIBRARIES})
endif()
add_test(NAME test_smart COMMAND test_smart)

# PE/COFF section reader test
add_executable(test_pe unit/test_pe.c ../src/platform/linux/pe.c)
target_link_libraries(test_pe PRIVATE winafi-core)
target_include_directories(test_pe PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/platform/linux)
add_test(NAME test_pe COMMAND test_pe WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})

# Install-prefix asset resolver test
add_executable(test_assets unit/test_assets.c ../src/platform/linux/assets.c)
target_link_libraries(test_assets PRIVATE winafi-core)
target_include_directories(test_assets PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/platform/linux)
target_compile_definitions(test_assets PRIVATE _POSIX_C_SOURCE=200809L)
add_test(NAME test_assets COMMAND test_assets WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})

# SBAT validation test (runs from source root so the relative asset path resolves)
add_executable(test_sbat unit/test_sbat.c ../src/platform/linux/sbat.c ../src/platform/linux/pe.c)
target_link_libraries(test_sbat PRIVATE winafi-core)
target_include_directories(test_sbat PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/platform/linux)
add_test(NAME test_sbat COMMAND test_sbat WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})

# Dark mode test (requires Qt5)
if(Qt5_FOUND)
    add_executable(test_dark_mode unit/test_dark_mode.cpp ../src/gui/dark_mode.cpp)
    target_link_libraries(test_dark_mode PRIVATE Qt5::Widgets)
    target_include_directories(test_dark_mode PRIVATE ${CMAKE_SOURCE_DIR}/src)
    set_property(TARGET test_dark_mode PROPERTY AUTOMOC ON)
    add_test(NAME test_dark_mode COMMAND test_dark_mode)
    set_tests_properties(test_dark_mode PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")

    # Theme stylesheet generation (headless)
    add_executable(test_theme unit/test_theme.cpp ${CMAKE_SOURCE_DIR}/src/gui/theme/Theme.cpp)
    target_link_libraries(test_theme PRIVATE Qt5::Widgets)
    target_include_directories(test_theme PRIVATE ${CMAKE_SOURCE_DIR}/src/gui)
    add_test(NAME test_theme COMMAND test_theme)
    set_tests_properties(test_theme PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")

    # Windows customization checkbox->WUE flag mapping (headless)
    add_executable(test_customize_section unit/test_customize_section.cpp)
    target_link_libraries(test_customize_section PRIVATE winafi_gui winafi-core Qt5::Widgets)
    target_include_directories(test_customize_section PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/gui)
    set_property(TARGET test_customize_section PROPERTY AUTOMOC ON)
    add_test(NAME test_customize_section COMMAND test_customize_section)
    set_tests_properties(test_customize_section PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
endif()
